# rock-paper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.override.yaml  compose.yaml  hoppscotch-collection.json  pyproject.toml
app/: choice.py  dependencies.py  exceptions.py  main.py  settings.py
app/database/: database.py  models.py  redis.py
app/routes/: matches.py  matchmaking.py  players.py  root.py
app/services/: constants.py  match.py  matchmaking.py  player.py
app/workers/: matchmaker.py
migrations/: env.py
migrations/versions/: 08f82a01da19_initial_migration.py  init.sql
tests/: conftest.py
tests/e2e/: test_match.py  test_player.py
tests/unit/: test_choice.py
